@@ -21,36 +21,17 @@
  * CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
+package com.prodyna.pac.conference.ejb.api.service;
 
+import java.io.Serializable;
 
-test {
-
-    // explicitly include tests
-    include 'com/prodyna/pac/conference/**'
-
-    // show standard out and standard error of the test JVM(s) on the console
-    // testLogging.showStandardStreams = true
-
-    // set heap size for the test JVM(s)
-    minHeapSize = "128m"
-    maxHeapSize = "512m"
-
-    // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
-
-    // set system properties for the test JVM(s)
-    systemProperty 'arquillian.launch', 'jboss_gradle'
-
-    // listen to events in the test execution lifecycle
-    beforeTest { descriptor ->
-        logger.lifecycle("Running test: " + descriptor)
-        println("JAVA_HOME: " + System.getenv('JAVA_HOME') + new File(System.getenv('JAVA_HOME')).isDirectory())
-    }
-
-    // listen to standard out and standard error of the test JVM(s)
-    onOutput { descriptor, event ->
-        // logger.lifecycle("\tTest: " + descriptor + " produced standard out/err: " + event.message)
-        logger.lifecycle("\t" + event.message)
-    }
+/**
+ * Service
+ * <p/>
+ * Author: Nicolas Moser
+ * Date: 11.09.13
+ * Time: 16:41
+ */
+public interface Service extends Serializable {
 
 }
